--- a/site/test.html
+++ b/site/test.html
@@ -15,8 +15,8 @@
         <div id="questions-list">
         
         </div>
-        <div id="question-page">
-
+        <div id="question-page">            
+            <div id="question-block"></div>
         </div>    
     </div>
     
