css update+main page

--- a/site/test.html
+++ b/site/test.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NashTest</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="testStyle.css">
     
 </head>
 <body>
@@ -20,6 +20,6 @@
         </div>    
     </div>
     
-    <script src="script.js"></script>
+    <script src="testScript.js"></script>
 </body>
 </html>
